syntax = "proto3";

package ai.metathings.service.deviced;
option go_package = "github.com/nayotta/metathings/proto/deviced";

import "google/protobuf/wrappers.proto";

import "model.proto";

message PushFrameToFlowOnceRequest {
  google.protobuf.StringValue id = 1;
  OpDevice device = 2;
  OpFrame frame = 3;
}
